tests/ui/issues/issue-33293.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `aaa`
  --> $DIR/issue-33293.rs:3:9
   |
LL |         aaa::bbb(_) => ()
   |         ^^^ use of unresolved module or unlinked crate `aaa`
   |
   = help: if you wanted to use a crate named `aaa`, use `cargo add aaa` to add it to your `Cargo.toml`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
